--- a/tpn-banker-client/src/assets/main.css
+++ b/tpn-banker-client/src/assets/main.css
@@ -15,6 +15,17 @@ a,
   padding: 3px;
 }
 
+.icon-wrapper {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 64px;
+  height: 64px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  margin-bottom: 1rem;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
